--- a/style.css
+++ b/style.css
@@ -388,7 +388,14 @@ img {
     display: flex;
     justify-content: center;
 }
-
+.profile-photo {
+  width: 140px;
+  height: 140px;
+  object-fit: cover;
+  border-radius: 50%; /* foto bulat */
+  border: 3px solid rgba(255, 255, 255, 0.3);
+  z-index: 2;
+}
 .profile-card {
     position: relative;
     background: var(--bg-card);
@@ -1314,3 +1321,4 @@ img {
         padding: 24px;
     }
 }
+
